    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
 1-Apr-2003
Additions:
    1. Added format parameter for JUnitServlet: values are "text" or "html"

Problems fixed:
    1. HttpUnit now handles refresh headers without explicit URLs, defaulting to refreshing the containing page.
    2. Bug #709979: Select.selectedIndex was returning -1 for a normal select box with no options explicitly selected.

28-Mar-2003
Acknowledgements:
    Thanks to Ron Webster for designing the new HttpUnit logo.

27-Mar-2003
Acknowledgements:
    Thanks to Mark Luty for supplying a test for the getElementsByName function.

Additions:
    1. Document.getElementsByName is now supported

26-Mar-2003
Problems fixed:
    1. HttpUnit was chopping off javascript urls if they contained a '#' character.

24-Mar-2003
Acknowledgements:
    Thanks to Andrew Bickerton for identifying the javascript parent frame update problem and suggesting a fix.

Problems fixed:
    1. Following a javascript link which updated a parent frame via manipulating the location was causing a 'NoSuchFrame'
       exception to be thrown.

 23-Mar-2003
Problems fixed:
    1. ServletUnit had not implemented HttpServletRequest.getURL();
    2. ServletUnit was always supplying a charset parameter, even when not requested.

 20-Mar-2003
Problems fixed:
    1. ServletUnit had not implemented HttpServletRequest.getContentLength();

 19-Mar-2003
Acknowledgements:
    Thanks to Brendan Boesen for correcting the session invalidation problem.
    Thanks to Andrew Bickerton for correcting the document.write append problem.

Problems fixed: