@@ -95,6 +95,7 @@ Inline and included scripts are supported, as are the following DOM elements:
 <li>close - closes the open document and replaces its contents with the written text</li>
 <li>getElementById - returns the element in the document with the specified ID</li>
 <li>getElementsByName - returns an array of all elements in the document with the specified name</li>
+<li>getElementsByTagName - returns an array of all elements in the document with the specified tag name</li>
 <li>write - writes a string to the contents of the current open document</li>
 <li>writeln - writes a line with carriage-return to the contents of the current open document</li>
 </ul>
@@ -123,6 +124,7 @@ Inline and included scripts are supported, as are the following DOM elements:
 <ul>
 <li>submit - submits the form</li>
 <li>reset  - resets the form controls to their default values</li>
+<li>getElementsByTagName - returns an array of all elements in the form with the specified tag name</li>
 </ul>
 
 <h3>Image</h3>
